--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<title>Template - HTML5 standard</title>
+	<title>Template - HTML5 standard - overview</title>
 
 	<!-- styles -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-example.css">
 
 	<!-- scripts I: need to be loaded before DOM -->
 	<!--[if lt IE 7]>
@@ -25,54 +25,20 @@
 </head>
 <body>
 
-	<header class="header" role="banner">
-		<nav class="main-nav" role="navigation">
-			<ul class="main-nav-inner">
-				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 1</a>
-				</li>
-				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 2</a>
-				</li>
-				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 3</a>
+	<section class="main-section" role="main">
+		<h1>Go to</h1>
+		<nav>
+			<ul>
+				<li>
+					<a href="example1.html">Example 1</a>
 				</li>
 			</ul>
 		</nav>
-		<hgroup>
-			<h1>Super Heading</h1>
-			<h2>Sup Heading</h2>
-		</hgroup>
-	</header>
-
-	<section class="main-section"role="main">
-		<h1>Normal Heading</h1>
-		<article>
-			<p>
-				Lorem ipsum dolorem, Cornelia in coloseum est.
-				<br>
-				Ubi Marcus est ? Cornelia Marcus expectat.
-			</p>
-			<p>
-				Carve carnem! Hannibal ante portas et Bello Gallico est ...
-			</p>
-		</article>
-		<aside>
-			<blockquote>
-				some great quote from customer
-			</blockquote>
-		</aside>
 	</section>
-
-	<footer class="footer" role="contentinfo">
-		Lorem ipsum
-	</footer>
 
 	<!-- scripts II: after DOM load -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
 
-	<script src="js/elastic-digital.js"></script>
-	
 </body>
 </html>
