--- a/example1.html
+++ b/example1.html
@@ -9,10 +9,10 @@
 	<title>Template - HTML5 standard</title>
 
 	<!-- styles -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-example.css">
 
 	<!-- scripts I: need to be loaded before DOM -->
-	<!--[if lt IE 7]>
+	<!--[if lt IE 9]>
 		<script src="js/libs/html5shiv.min.js"></script>
 	<![endif]-->
 	<!-- ####
@@ -29,25 +29,37 @@
 		<nav class="main-nav" role="navigation">
 			<ul class="main-nav-inner">
 				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 1</a>
-				</li>
-				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 2</a>
-				</li>
-				<li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">item 3</a>
+					<a href="" class="main-nav-inner-content">nav item 1</a>
+				</li><!--
+				--><li class="main-nav-inner-item">
+					<a href="" class="main-nav-inner-content">nav item 2</a>
+				</li><!--
+				--><li class="main-nav-inner-item">
+					<a href="" class="main-nav-inner-content">nav item 3</a>
 				</li>
 			</ul>
 		</nav>
 		<hgroup>
-			<h1>Super Heading</h1>
-			<h2>Sup Heading</h2>
+			<h1>h1 in header element</h1>
+			<h2>h2 in header element</h2>
 		</hgroup>
 	</header>
 
 	<section class="main-section" role="main">
-		<h1>Normal Heading</h1>
+		<h1>h1 in section </h1>
 		<article>
+			<h2>h2 in article </h2>
+			<p>
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				<br>
+				Ubi Marcus est ? Cornelia Marcus expectat.
+			</p>
+			<p>
+				Carve carnem! Hannibal ante portas et Bello Gallico est ...
+			</p>
+		</article>
+		<article>
+			<h2>h2 in article </h2>
 			<p>
 				Lorem ipsum dolorem, Cornelia in coloseum est.
 				<br>
@@ -72,7 +84,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
 
-	<script src="js/elastic-digital.js"></script>
+	<!--script src="js/elastic-digital.js"></script-->
 	
 </body>
 </html>
