--- a/example1.html
+++ b/example1.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 
-	<header class="header" role="banner">
-		<nav class="main-nav" role="navigation">
+	<header class="row header" role="banner">
+		<nav class="span12 main-nav" role="navigation">
 			<ul class="main-nav-inner">
 				<li class="main-nav-inner-item">
 					<a href="" class="main-nav-inner-content">nav item 1</a>
@@ -39,45 +39,85 @@
 				</li>
 			</ul>
 		</nav>
-		<hgroup>
+		<hgroup class="span12">
 			<h1>h1 in header element</h1>
 			<h2>h2 in header element</h2>
 		</hgroup>
 	</header>
-
-	<section class="main-section" role="main">
-		<h1>h1 in section </h1>
-		<article>
-			<h2>h2 in article </h2>
-			<p>
-				Lorem ipsum dolorem, Cornelia in coloseum est.
-				<br>
-				Ubi Marcus est ? Cornelia Marcus expectat.
-			</p>
-			<p>
-				Carve carnem! Hannibal ante portas et Bello Gallico est ...
-			</p>
-		</article>
-		<article>
-			<h2>h2 in article </h2>
-			<p>
-				Lorem ipsum dolorem, Cornelia in coloseum est.
-				<br>
-				Ubi Marcus est ? Cornelia Marcus expectat.
-			</p>
-			<p>
-				Carve carnem! Hannibal ante portas et Bello Gallico est ...
-			</p>
-		</article>
-		<aside>
+	<section class="main-section row" role="main">
+		<section class="sub-section span8">
+			<h1>h1 in section </h1>
+			<article class="">
+				<h2>h2 in article </h2>
+				<p>
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					<br>
+					Ubi Marcus est ? Cornelia Marcus expectat.
+				</p>
+				<p>
+					Carve carnem! Hannibal ante portas et Bello Gallico est ...
+				</p>
+			</article>
+			<article class="">
+				<h2>h2 in article </h2>
+				<p>
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					<br>
+					Ubi Marcus est ? Cornelia Marcus expectat.
+				</p>
+				<p>
+					Carve carnem! Hannibal ante portas et Bello Gallico est ...
+				</p>
+			</article>
+		</section>
+		<aside class="span4 aside">
+			<h1>h1 in aside </h1>
 			<blockquote>
 				some great quote from customer
 			</blockquote>
 		</aside>
 	</section>
 
-	<footer class="footer" role="contentinfo">
-		Lorem ipsum
+	<section class="main-section row" role="main">
+		<h1 class="span12">h1 in section </h1>
+		<article class="span6">
+			<h2>h2 in article </h2>
+			<p>
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				<br>
+				Ubi Marcus est ? Cornelia Marcus expectat.
+			</p>
+			<p>
+				Carve carnem! Hannibal ante portas et Bello Gallico est ...
+			</p>
+		</article>
+		<article class="span6">
+			<h2>h2 in article </h2>
+			<p>
+				Lorem ipsum dolorem, Cornelia in coloseum est.
+				<br>
+				Ubi Marcus est ? Cornelia Marcus expectat.
+			</p>
+			<p>
+				Carve carnem! Hannibal ante portas et Bello Gallico est ...
+			</p>
+		</article>
+	</section>
+
+	<footer class="row footer" role="contentinfo">
+		<section class="span12">
+			&copy; Lorem ipsum dolorem, Cornelia in coloseum est. Lorem ipsum dolorem, Cornelia in coloseum est. 
+		</section>
 	</footer>
 
 	<!-- scripts II: after DOM load -->
