--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	<title>Template - HTML5 standard - overview</title>
 
 	<!-- styles -->
-	<link rel="stylesheet" href="css/style-example.css">
+	<link rel="stylesheet" href="css/style-index.css">
 
-	<!-- scripts I: need to be loaded before DOM -->
+	<!--	###
+			### scripts I: need to be loaded before DOM 
+			### -->
 	<!--[if lt IE 9]>
 		<script src="js/libs/html5shiv.min.js"></script>
 	<![endif]-->
@@ -31,6 +33,9 @@
 			<ul>
 				<li>
 					<a href="example1.html">Example 1</a>
+				</li>
+				<li>
+					<a href="example2.html">Example 2</a>
 				</li>
 			</ul>
 		</nav>
