move class row in own element to gain negative margin back

--- a/example2.html
+++ b/example2.html
@@ -26,64 +26,68 @@
 <body>
 
 	<header class="outer-wrapper header" role="banner">
-		<div class="inner-wrapper row">
-			<nav class="span12 main-nav" role="navigation">
-				<ul class="main-nav-inner">
-					<li class="main-nav-inner-item">
-						<a href="" class="main-nav-inner-content">nav item 1</a>
-					</li><!--
-					--><li class="main-nav-inner-item">
-						<a href="" class="main-nav-inner-content">nav item 2</a>
-					</li><!--
-					--><li class="main-nav-inner-item">
-						<a href="" class="main-nav-inner-content">nav item 3</a>
-					</li>
-				</ul>
-			</nav>
-			<hgroup class="span12">
-				<h1>h1 in header element</h1>
-				<h2>h2 in header element</h2>
-			</hgroup>
+		<div class="inner-wrapper">
+			<section class="row">
+				<nav class="span12 main-nav" role="navigation">
+					<ul class="main-nav-inner">
+						<li class="main-nav-inner-item">
+							<a href="" class="main-nav-inner-content">nav item 1</a>
+						</li><!--
+						--><li class="main-nav-inner-item">
+							<a href="" class="main-nav-inner-content">nav item 2</a>
+						</li><!--
+						--><li class="main-nav-inner-item">
+							<a href="" class="main-nav-inner-content">nav item 3</a>
+						</li>
+					</ul>
+				</nav>
+				<hgroup class="span12">
+					<h1>h1 in header element</h1>
+					<h2>h2 in header element</h2>
+				</hgroup>
+			</section>
 		</div>
 	</header>
 	<section class="outer-wrapper main-section main-section-1" role="main">
-		<div class="inner-wrapper row">
-			<section class="sub-section span8">
-				<h1>h1 in section </h1>
-				<article class="">
-					<h2>h2 in article </h2>
-					<p>
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						<br>
-						Ubi Marcus est ? Cornelia Marcus expectat.
-					</p>
-					<p>
-						Carve carnem! Hannibal ante portas et Bello Gallico est ...
-					</p>
-				</article>
-				<article class="">
-					<h2>h2 in article </h2>
-					<p>
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						<br>
-						Ubi Marcus est ? Cornelia Marcus expectat.
-					</p>
-					<p>
-						Carve carnem! Hannibal ante portas et Bello Gallico est ...
-					</p>
-				</article>
+		<div class="inner-wrapper">
+			<section class="row">
+				<section class="sub-section span8">
+					<h1>h1 in section </h1>
+					<article class="">
+						<h2>h2 in article </h2>
+						<p>
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							<br>
+							Ubi Marcus est ? Cornelia Marcus expectat.
+						</p>
+						<p>
+							Carve carnem! Hannibal ante portas et Bello Gallico est ...
+						</p>
+					</article>
+					<article class="">
+						<h2>h2 in article </h2>
+						<p>
+							Lorem ipsum dolorem, Cornelia in coloseum est.
+							<br>
+							Ubi Marcus est ? Cornelia Marcus expectat.
+						</p>
+						<p>
+							Carve carnem! Hannibal ante portas et Bello Gallico est ...
+						</p>
+					</article>
+				</section>
+				<aside class="span4 aside">
+					<h1>h1 in aside </h1>
+					<blockquote>
+						some great quote from customer
+					</blockquote>
+				</aside>
 			</section>
-			<aside class="span4 aside">
-				<h1>h1 in aside </h1>
-				<blockquote>
-					some great quote from customer
-				</blockquote>
-			</aside>
 		</div>
 	</section>
 
