adjust nav links and add rows

--- a/example2.html
+++ b/example2.html
@@ -31,13 +31,16 @@
 				<nav class="span12 main-nav" role="navigation">
 					<ul class="main-nav-inner">
 						<li class="main-nav-inner-item">
-							<a href="" class="main-nav-inner-content">nav item 1</a>
+							<a href="index.html" class="main-nav-inner-content">Home</a>
 						</li><!--
 						--><li class="main-nav-inner-item">
-							<a href="" class="main-nav-inner-content">nav item 2</a>
+							<a href="example1.html" class="main-nav-inner-content">Example 1</a>
 						</li><!--
 						--><li class="main-nav-inner-item">
-							<a href="" class="main-nav-inner-content">nav item 3</a>
+							<a href="example2.html" class="main-nav-inner-content">Example 2</a>
+						</li><!--
+						--><li class="main-nav-inner-item">
+							<a href="" class="main-nav-inner-content">Example 3</a>
 						</li>
 					</ul>
 				</nav>
@@ -49,8 +52,8 @@
 		</div>
 	</header>
 	<section class="outer-wrapper main-section main-section-1" role="main">
-		<div class="inner-wrapper">
-			<section class="row">
+		<section class="inner-wrapper">
+			<div class="row">
 				<section class="sub-section span8">
 					<h1>h1 in section </h1>
 					<article class="">
@@ -87,49 +90,53 @@
 						some great quote from customer
 					</blockquote>
 				</aside>
-			</section>
-		</div>
+			</div>
+		</section>
 	</section>
 
 	<section class="outer-wrapper main-section main-section-2" role="main">
-		<div class="inner-wrapper row">
-			<h1 class="span12">h1 in section </h1>
-			<article class="span6">
-				<h2>h2 in article </h2>
-				<p>
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					<br>
-					Ubi Marcus est ? Cornelia Marcus expectat.
-				</p>
-				<p>
-					Carve carnem! Hannibal ante portas et Bello Gallico est ...
-				</p>
-			</article>
-			<article class="span6">
-				<h2>h2 in article </h2>
-				<p>
-					Lorem ipsum dolorem, Cornelia in coloseum est.
-					<br>
-					Ubi Marcus est ? Cornelia Marcus expectat.
-				</p>
-				<p>
-					Carve carnem! Hannibal ante portas et Bello Gallico est ...
-				</p>
-			</article>
-		</div>
+		<section class="inner-wrapper">
+			<div class="row">
+				<h1 class="span12">h1 in section </h1>
+				<article class="span6">
+					<h2>h2 in article </h2>
+					<p>
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						<br>
+						Ubi Marcus est ? Cornelia Marcus expectat.
+					</p>
+					<p>
+						Carve carnem! Hannibal ante portas et Bello Gallico est ...
+					</p>
+				</article>
+				<article class="span6">
+					<h2>h2 in article </h2>
+					<p>
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						<br>
+						Ubi Marcus est ? Cornelia Marcus expectat.
+					</p>
+					<p>
+						Carve carnem! Hannibal ante portas et Bello Gallico est ...
+					</p>
+				</article>
+			</div>
+		</section>
 	</section>
 
 	<footer class="outer-wrapper footer" role="contentinfo">
-		<div class="inner-wrapper row">
-			<section class="span12">
-				&copy; Lorem ipsum dolorem, Cornelia in coloseum est. Lorem ipsum dolorem, Cornelia in coloseum est. 
-			</section>
-		</div>
+		<section class="inner-wrapper">
+			<div class="row">
+				<section class="span12">
+					&copy; Lorem ipsum dolorem, Cornelia in coloseum est. Lorem ipsum dolorem, Cornelia in coloseum est.
+				</section>
+			</div>
+		</section>
 	</footer>
 
 	<!-- scripts II: after DOM load -->
@@ -137,6 +144,6 @@
 	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
 
 	<!--script src="js/elastic-digital.js"></script-->
-	
+
 </body>
 </html>
