--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	# use only tests needed for project IF ANY + minify
 	# remove this comment ;)
 	-->
-	<script src="js/libs/modernizr.2.6.1.custom.build.js"></script>
+	<script src="js/libs/modernizr.2.6.2.min.js"></script>
 
 </head>
 <body>
