--- a/template_commented.html
+++ b/template_commented.html
@@ -1,4 +1,7 @@
+<!-- simplified doctype works for all previous versions of HTML as well -->
 <!doctype html>
+
+
 <!--[if lt IE 7]> <html class="no-js ie lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie ie7 lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie ie8 lt-ie9" lang="en"> <![endif]-->
@@ -22,7 +25,7 @@
 	# use only tests needed for project IF ANY + minify
 	# remove this comment ;)
 	-->
-	<script src="js/libs/modernizr.2.6.1.custom.build.js"></script>
+	<script src="js/libs/modernizr.2.6.2.min.js"></script>
 
 </head>
 <body>
