--- a/template_commented.html
+++ b/template_commented.html
@@ -1,9 +1,9 @@
-<!-- simplified doctype works for all previous versions of HTML as well -->
-<!doctype html>
+<!doctype html><!-- simplified doctype works for all previous versions of HTML as well -->
 
-<!-- ###
+<!--
 # html conditional classes to target different versions of IE as proposed by John Irish http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ - and several updated since
-# we really don't care about browsers older IE6 - change lt IE7 to IE6 / can be removed if IE6 si not in the specs -->
+# we really don't care about browsers older IE6 - change lt IE7 to IE6 / can be removed if IE6 si not in the specs
+-->
 <!--[if IE 6]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]> <html class="no-js ie7 lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js ie8 lt-ie9" lang="en"> <![endif]-->
