add comment for inline-block hack

--- a/template_commented.html
+++ b/template_commented.html
@@ -50,7 +50,7 @@
 			<ul class="main-nav-inner">
 				<li class="main-nav-inner-item">
 					<a href="index.html" class="main-nav-inner-content">Home</a>
-				</li><!--
+				</li><!-- use this 'hack' to prevent white space between inline-block elements
 				--><li class="main-nav-inner-item">
 					<a href="example1.html" class="main-nav-inner-content">Example 1</a>
 				</li><!--
