--- a/example2.html
+++ b/example2.html
@@ -26,122 +26,110 @@
 <body>
 
 	<header class="outer-wrapper header" role="banner">
-		<div class="inner-wrapper">
-			<section class="row">
-				<nav class="span12 main-nav" role="navigation">
-					<ul class="main-nav-inner">
-						<li class="main-nav-inner-item">
-							<a href="index.html" class="main-nav-inner-content">Home</a>
-						</li><!--
-						--><li class="main-nav-inner-item">
-							<a href="example1.html" class="main-nav-inner-content">Example 1</a>
-						</li><!--
-						--><li class="main-nav-inner-item">
-							<a href="example2.html" class="main-nav-inner-content">Example 2</a>
-						</li><!--
-						--><li class="main-nav-inner-item">
-							<a href="" class="main-nav-inner-content">Example 3</a>
-						</li>
-					</ul>
-				</nav>
-				<hgroup class="span12">
-					<h1>h1 in header element</h1>
-					<h2>h2 in header element</h2>
-				</hgroup>
-			</section>
-		</div>
+		<section class="row-fluid">
+			<nav class="span12 main-nav" role="navigation">
+				<ul class="main-nav-inner">
+					<li class="main-nav-inner-item">
+						<a href="index.html" class="main-nav-inner-content">Home</a>
+					</li><!--
+					--><li class="main-nav-inner-item">
+						<a href="example1.html" class="main-nav-inner-content">Example 1</a>
+					</li><!--
+					--><li class="main-nav-inner-item">
+						<a href="example2.html" class="main-nav-inner-content">Example 2</a>
+					</li><!--
+					--><li class="main-nav-inner-item">
+						<a href="" class="main-nav-inner-content">Example 3</a>
+					</li>
+				</ul>
+			</nav>
+		</section>
 	</header>
 	<section class="outer-wrapper main-section main-section-1" role="main">
-		<section class="inner-wrapper">
-			<div class="row">
-				<section class="sub-section span8">
-					<h1>h1 in section </h1>
-					<article class="">
-						<h2>h2 in article </h2>
-						<p>
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							<br>
-							Ubi Marcus est ? Cornelia Marcus expectat.
-						</p>
-						<p>
-							Carve carnem! Hannibal ante portas et Bello Gallico est ...
-						</p>
-					</article>
-					<article class="">
-						<h2>h2 in article </h2>
-						<p>
-							Lorem ipsum dolorem, Cornelia in coloseum est.
-							<br>
-							Ubi Marcus est ? Cornelia Marcus expectat.
-						</p>
-						<p>
-							Carve carnem! Hannibal ante portas et Bello Gallico est ...
-						</p>
-					</article>
-				</section>
-				<aside class="span4 aside">
-					<h1>h1 in aside </h1>
-					<blockquote>
-						some great quote from customer
-					</blockquote>
-				</aside>
-			</div>
-		</section>
+		<div class="row-fluid">
+			<section class="sub-section span8">
+				<h1>h1 in section </h1>
+				<article class="">
+					<h2>h2 in article </h2>
+					<p>
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						<br>
+						Ubi Marcus est ? Cornelia Marcus expectat.
+					</p>
+					<p>
+						Carve carnem! Hannibal ante portas et Bello Gallico est ...
+					</p>
+				</article>
+				<article class="">
+					<h2>h2 in article </h2>
+					<p>
+						Lorem ipsum dolorem, Cornelia in coloseum est.
+						<br>
+						Ubi Marcus est ? Cornelia Marcus expectat.
+					</p>
+					<p>
+						Carve carnem! Hannibal ante portas et Bello Gallico est ...
+					</p>
+				</article>
+			</section>
+			<aside class="span4 aside">
+				<h1>h1 in aside </h1>
+				<blockquote>
+					some great quote from customer
+				</blockquote>
+			</aside>
+		</div>
 	</section>
 
 	<section class="outer-wrapper main-section main-section-2" role="main">
-		<section class="inner-wrapper">
-			<div class="row">
-				<h1 class="span12">h1 in section </h1>
-				<article class="span6">
-					<h2>h2 in article </h2>
-					<p>
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						<br>
-						Ubi Marcus est ? Cornelia Marcus expectat.
-					</p>
-					<p>
-						Carve carnem! Hannibal ante portas et Bello Gallico est ...
-					</p>
-				</article>
-				<article class="span6">
-					<h2>h2 in article </h2>
-					<p>
-						Lorem ipsum dolorem, Cornelia in coloseum est.
-						<br>
-						Ubi Marcus est ? Cornelia Marcus expectat.
-					</p>
-					<p>
-						Carve carnem! Hannibal ante portas et Bello Gallico est ...
-					</p>
-				</article>
-			</div>
-		</section>
+		<div class="row-fluid">
+			<h1 class="span12">h1 in section </h1>
+			<article class="span6">
+				<h2>h2 in article </h2>
+				<p>
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					<br>
+					Ubi Marcus est ? Cornelia Marcus expectat.
+				</p>
+				<p>
+					Carve carnem! Hannibal ante portas et Bello Gallico est ...
+				</p>
+			</article>
+			<article class="span6">
+				<h2>h2 in article </h2>
+				<p>
+					Lorem ipsum dolorem, Cornelia in coloseum est.
+					<br>
+					Ubi Marcus est ? Cornelia Marcus expectat.
+				</p>
+				<p>
+					Carve carnem! Hannibal ante portas et Bello Gallico est ...
+				</p>
+			</article>
+		</div>
 	</section>
 
 	<footer class="outer-wrapper footer" role="contentinfo">
-		<section class="inner-wrapper">
-			<div class="row">
-				<section class="span12">
-					&copy; Lorem ipsum dolorem, Cornelia in coloseum est. Lorem ipsum dolorem, Cornelia in coloseum est.
-				</section>
-			</div>
-		</section>
+		<div class="row-fluid">
+			<section class="span12">
+				&copy; Lorem ipsum dolorem, Cornelia in coloseum est. Lorem ipsum dolorem, Cornelia in coloseum est.
+			</section>
+		</div>
 	</footer>
 
 	<!-- scripts II: after DOM load -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
 
 	<!--script src="js/elastic-digital.js"></script-->
 
