--- a/index.html
+++ b/index.html
@@ -1,87 +1,125 @@
 <!doctype html>
 
-<!--[if lte IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 lt-ie9" lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="no-js ie9 lt-ie9" lang="en"> <![endif]-->
+<!--[if lt IE 8]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]> <html class="no-js ie8 lt-ie9" lang="en"> <![endif]-->
+<!--[if IE 9]> <html class="no-js ie9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+
 <head>
+
 	<meta charset="utf-8">
 	<title>Template - HTML5 standard - overview</title>
 
 	<!-- styles -->
-	<link rel="stylesheet" href="css/style-index.css">
+	<link rel="stylesheet" href="css/style.css">
 
-	<!--	###
-			### scripts I: need to be loaded before DOM
-			### -->
-	<!--[if lt IE 9]>
-		<script src="js/libs/html5shiv.min.js"></script>
-	<![endif]-->
-	<!-- ####
-	# before production use built tool: http://modernizr.com/download/
+	<!-- scripts I: need to be loaded before DOM -->
+	<!--
+	# This is a *full-featured* version of Modernizr + the html5shiv;
+	# you don't need all this
+	# before production, use built tool: http://modernizr.com/download/
 	# use only tests needed for project IF ANY + minify
-	# remove this comment ;)
+	# and delete THIS COMMENT!
 	-->
 	<script src="js/libs/modernizr.2.6.2.min.js"></script>
+
+	<!--
+	# If you're not using Modernizr with the html5shiv
+	# add the script reference below
+	# otherwise remove
+	[if lt IE 9]>
+		<script src="js/libs/html5shiv.min.js"></script>
+	<![endif]-->
 
 </head>
 <body>
 
-	<header class="header wrapper row" role="banner">
-		<nav class="span8 main-nav" role="navigation">
-			<ul class="main-nav-inner">
-				<li class="main-nav-inner-item">
-					<a href="index.html" class="main-nav-inner-content">Home</a>
-				</li><!--
-				--><li class="main-nav-inner-item">
-					<a href="example1.html" class="main-nav-inner-content">Example 1</a>
-				</li><!--
-				--><li class="main-nav-inner-item">
-					<a href="example2.html" class="main-nav-inner-content">Example 2</a>
-				</li><!--
-				--><li class="main-nav-inner-item">
-					<a href="" class="main-nav-inner-content">Example 3</a>
-				</li>
-			</ul>
-		</nav>
-		<div class="span4 grid-button">
-			<a href="" class="main-nav-inner-content"><span>show</span> grid</a>
+	<header class="header-wrapper">
+
+		<div class="row-fluid">
+			<div class="span6 claim">
+				<h1>
+					Claim - lorem ipsum
+				</h1>
+			</div>
+			<div class="span6 logo-holder">
+				<img src="images/logo_html5_badge.png" alt="logo placeholder">
+			</div>
 		</div>
 
-		<hr class="span12">
-		<!--hgroup class="span12">
-			<h1>h1 in header element</h1>
-			<h2>h2 in header element</h2>
-		</hgroup-->
+		<div class="row-fluid">
+
+			<nav class="span8">
+				<ul class="navigation">
+					<li class="navigation-item">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="navigation-item">
+						<a href="example1.html">Example 1</a>
+					</li>
+					<li class="navigation-item">
+						<a href="example2.html">Example 2</a>
+					</li>
+				</ul>
+			</nav>
+
+			<div class="span4 search-holder">
+				<form action="post">
+					<label for="search">
+						<input id="search" placeholder="search">
+					</label>
+				</form>
+			</div>
+		</div>
 	</header>
 
-	<section class="main-section wrapper row" role="main">
-		<article class="span12">
-			<h1>Project Overview</h1>
-			<p>
-				The perpouse of this project is to have a boilerplate for new projects. We concentrate on HTML5, LESS and the relevant JS scripts.
-			</p>
-			<ol>
-				<li>LESS</li>
-				<dl>
-					<dt>var<dt>
-					<dd>variables file for Grid, colors, etc.</dd>
-					<dt>reset</dt>
-					<dd>variables file for Grid, colors, etc.</dd>
-				</dl>
-			</ol>
-		</article>
-		<article class="span12">
-			<h1>The Grid</h1>
-			<p>
-				The fixed grid is flexible regarding the number of rows, the width each row has and the space between the rows. Once these numbers are specified in the variable file (LESS) the columns will be calculated automatically.
-			</p>
-		</article>
+	<section class="content-wrapper">
+		<div class="row-fluid">
+			<article class="span12">
+				<h1>Project Overview</h1>
+				<p>
+					The perpouse of this project is to have a boilerplate for new projects. We concentrate on HTML5, LESS and the relevant JS scripts.
+				</p>
+				<ol>
+					<li>
+						LESS
+						<dl>
+							<dt>var<dt>
+							<dd>variables file for Grid, colors, etc.</dd>
+							<dt>reset</dt>
+							<dd>based on </dd>
+						</dl>
+					</li>
+				</ol>
+				<h1>The Grid</h1>
+				<p>
+					The fixed grid is flexible regarding the number of rows, the width each row has and the space between the rows. Once these numbers are specified in the variable file (LESS) the columns will be calculated automatically.
+				</p>
+			</article>
+		</div>
 	</section>
 
+	<footer class="footer-wrapper">
+		<div class="row-fluid footer">
+			<div class="span6 footer-content">
+				<span class="no-copy"> © </span> <a href="http://scheiner.cc">scheiner.cc</a>
+			</div>
+			<div class="span6 footer-html5">
+				<a href="http://www.w3.org/html/logo/" target="_blank">
+					<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+				</a>
+			</div>
+		</div>
+	</footer>
+
 	<!-- scripts II: after DOM load -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.8.0.min.js"><\/script>')</script>
+
+	<!--
+	# Remote jQuery with local fallback; taken from HTML5 Boilerplate http://html5boilerplate.com
+	# jQuery version might not be the latest; check http://jquery.com
+	-->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.10.2.min.js"%3E%3C/script%3E'))</script>
 
 	<script type="text/javascript" src="js/main.js"></script>
 
