--- a/example1.html
+++ b/example1.html
@@ -1,8 +1,6 @@
 <!doctype html>
-
-<!--[if lte IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 lt-ie9" lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="no-js ie9 lt-ie9" lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
@@ -20,11 +18,10 @@
 	# use only tests needed for project IF ANY + minify
 	# remove this comment ;)
 	-->
-	<script src="js/libs/modernizr.2.6.2.min.js"></script>
+	<script src="js/libs/modernizr.3.11.4.min.js"></script>
 
 </head>
 <body>
-
 	<header class="header" role="banner">
 		<div class="row">
 			<nav class="span12 main-nav" role="navigation">
@@ -45,6 +42,7 @@
 			</nav>
 		</div>
 	</header>
+
 	<section class="main-section" role="main">
 		<div class="row">
 			<section class="sub-section span8">
@@ -128,10 +126,7 @@
 	</footer>
 
 	<!-- scripts II: after DOM load -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-
-	<!--script src="js/elastic-digital.js"></script-->
-
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-3.5.1.min.js"><\/script>')</script>
 </body>
 </html>
