--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-
-<!--[if lt IE 8]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js ie8 lt-ie9" lang="en"> <![endif]-->
 <!--[if IE 9]> <html class="no-js ie9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
@@ -14,26 +12,18 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- scripts I: need to be loaded before DOM -->
-	<!--
-	# This is a *full-featured* version of Modernizr + the html5shiv;
-	# you don't need all this
-	# before production, use built tool: http://modernizr.com/download/
-	# use only tests needed for project IF ANY + minify
-	# and delete THIS COMMENT!
-	-->
-	<script src="js/libs/modernizr.2.6.2.min.js"></script>
-
-	<!--
-	# If you're not using Modernizr with the html5shiv
-	# add the script reference below
-	# otherwise remove
-	[if lt IE 9]>
+	<!--[if lt IE 9]>
 		<script src="js/libs/html5shiv.min.js"></script>
 	<![endif]-->
+	<!-- ####
+	# before production use built tool: http://modernizr.com/download/
+	# use only tests needed for project IF ANY + minify
+	# remove this comment ;)
+	-->
+	<script src="js/libs/modernizr.3.11.4.min.js"></script>
 
 </head>
 <body>
-
 	<header class="header-wrapper">
 
 		<div class="row-fluid">
@@ -114,14 +104,8 @@
 
 	<!-- scripts II: after DOM load -->
 
-	<!--
-	# Remote jQuery with local fallback; taken from HTML5 Boilerplate http://html5boilerplate.com
-	# jQuery version might not be the latest; check http://jquery.com
-	-->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.10.2.min.js"%3E%3C/script%3E'))</script>
-
-	<script type="text/javascript" src="js/main.js"></script>
-
+	<!-- scripts II: after DOM load -->
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/libs/jquery-3.5.1.min.js"><\/script>')</script>
 </body>
 </html>
